moving hero about button down a bit

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -128,7 +128,7 @@
 
 											</div>
 
-											<p class="hero-buttons">
+											<p class="hero-buttons" style="margin-top: 20px;">
 												<a href="#about" class="btn btn-lg btn-primary">About Us</a>
 											</p>
 
