--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -13,9 +13,9 @@
 		
 		<!-- BASIC INFO -->
 		<title>CALYXEUM - Made In Detroit!</title>
-		<meta name="author" content="David Rozando">
+		<meta name="author" content="Rebecca Colett">
 		<meta name="keywords" content="responsive, parallax, bootstrap, html5 template, one page, landing page">
-		<meta name="description" content="Drew - A Multipurpose Landing Page Template">
+		<meta name="description" content="Calyxeum - Cannabis growing and processing in Detroit.  Expanding throughout Michigan, adding a female touch to a female plant.">
 
 		<!-- FAVICONS -->
 		<link rel="icon" href="images/logos/header-logo.png">
@@ -395,7 +395,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">1</span>
 									<h4 class="hiw-item-title">Fastest Growing Industry</h4>
-									<p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p>
+									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
 								</div>
 							</div>
 						</div>
@@ -407,7 +407,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">2</span>
 									<h4 class="hiw-item-title">High Profit Margins</h4>
-									<p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p>
+									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
 								</div>
 							</div>
 						</div>
@@ -421,7 +421,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">3</span>
 									<h4 class="hiw-item-title">Experienced Team</h4>
-									<p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p>
+									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
 								</div>
 							</div>
 						</div>
@@ -433,7 +433,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">4</span>
 									<h4 class="hiw-item-title">Ground Floor Opportunity</h4>
-									<p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p>
+									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
 								</div>
 							</div>
 						</div>
@@ -508,20 +508,20 @@
 
 								<br />
 
-								<form name="contact" action="modules/send-email.php" method="post" class="form form-ajax-submit">
+								<form name="contact" action="https://formspree.io/rcolett@calyxeum.com" method="post" class="form form-ajax-submit">
 									<p><strong>Send us a message:</strong></p>
 									<div class="form-validation alert"></div>
 									<div class="form-group">
-										<input type="text" name="contact-name" class="form-control" placeholder="Your Name">
+										<input type="text" name="name" class="form-control" placeholder="Your Name">
 									</div>
 									<div class="form-group">
-										<input type="text" name="contact-email" class="form-control" placeholder="Email Address">
+										<input type="text" name="email" class="form-control" placeholder="Email Address">
 									</div>
 									<div class="form-group">
-										<textarea name="contact-message" class="form-control" placeholder="Message" rows="5"></textarea>
+										<textarea name="message" class="form-control" placeholder="Message" rows="5"></textarea>
 									</div>
 									<div class="form-group">
-										<button class="btn btn-primary btn-lg btn-block">Send Message</button>
+										<button class="btn btn-primary btn-lg btn-block" >Send Message</button>
 									</div>
 								</form>
 
@@ -590,10 +590,6 @@
 		<script src="js/jquery.counterup.min.js"></script>
 		<script src="js/jquery.stellar.min.js"></script>
 		<script src="js/responsiveslides.min.js"></script>
-
-		<!-- DEMO SWITCHER
-		================================= -->
-		<script src="switcher.js"></script>
 
 		<!-- MAIN SCRIPT
 		================================= -->
