--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -280,7 +280,7 @@
 
 									<h2 class="section-heading text-left">Concentrates</h2>
 
-									<p>Our custom design Calyxcent line of Cannabis oils concentrates, vape oil, hash, tinctures, dabs, CBD oil. An oil, concentrate, or extract is any product derived from a Cannabis flower that is processed into a concentrated form, but each type of Cannabis oil is unique.</p>
+									<p>Our Calyxcent line includes Cannabis oil concentrates, vape oil, hash, tinctures, dabs, and CBD oil. An oil, concentrate, or extract is any product derived from a Cannabis flower that is processed into a concentrated form, but each type of Cannabis oil is unique.</p>
 									
 								</div>
 
