images and wording

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -309,7 +309,7 @@
 
 									<h2 class="section-heading text-left">Topical Ointments</h2>
 
-									<p>Our Calyxcent line of Cannabis-infused lotions, balms, and oils that are absorbed through the skin for localized relief of pain, soreness, and inflammation. Because they’re non-intoxicating, topicals are often chosen by patients who want the therapeutic benefits of Cannabis without the cerebral euphoria associated with other delivery methods.  Because they’re non-intoxicating, topicals are often chosen by patients who want the therapeutic benefits of marijuana without the cerebral euphoria associated with other delivery methods. Our products line including long-lasting patches and tingly lubricants for patients and recreational consumers alike.
+									<p>Our Calyxcent line of Cannabis-infused lotions, balms, and oils are absorbed through the skin for localized relief of pain, soreness, and inflammation. Topicals are often chosen by patients who want the therapeutic benefits of Cannabis without the cerebral euphoria associated with other delivery methods.
 
 									</p>
 									
