--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -444,23 +444,50 @@
 
 			</section>
 
-			<section id="closing" class="closing-section section-dark section">
-
-				<div class="section-background">
-
-					<!-- IMAGE BACKGROUND -->
-					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="images/backgrounds/closing-bg.jpg" alt="" style="opacity: 0.15;">
-					</div>
-
-				</div>
+			<section id="invest-form" class="contact-maps-section section">
 
 				<div class="container">
+					<div class="contact-maps-row row">
+						<div class="col-md-8 col-md-offset-2">
 
-					<h3 class="closing-shout">Ready to invest with Calyxeum?</h3>
+							<div class="contact-maps-box" data-animation="fadeIn">
 
-					<div class="closing-buttons" data-animation="tada"><a href="#hero" class="anchor-link btn btn-lg btn-primary">Request Investor Prospectus Here</a></div>
+								<h2 class="section-heading">Ready to invest in Calyxeum?</h2>
 
+								<form name="invest-form" action="https://formspree.io/rcolett@calyxeum.com" method="post" class="form form-ajax-submit">
+									<p><strong>Once you submit this form, a Calyxeum representative will contact you for an initial meeting.</strong></p>
+									<div class="form-validation alert"></div>
+									<div class="form-group">
+										<input type="text" name="name" class="form-control" placeholder="Your Name" required="required">
+									</div>
+									<div class="form-group">
+										<input type="email" name="email" class="form-control" placeholder="Email Address" required="required">
+									</div>
+									<div class="form-group">
+										<input type="tel" name="phone" class="form-control" placeholder="Phone Number" required="required">
+									</div>
+									<label>
+										<input type="checkbox" name="accredited" value="1">
+										Are you an accredited investor?
+									</label>
+									<br />
+									<br />
+									<select class="form-control" name="level" required="required">
+										<option value="" selected disabled>Select your investment level</option>
+										<option value="1-10">$1k - $10k</option>
+										<option value="10-50">$10k - $50k</option>
+										<option value="50-100">$50k - $100k</option>
+										<option value=">100">Greater than $100k</option>
+									  </select>
+									<div class="form-group">
+										<button class="btn btn-primary btn-lg btn-block" >Invest In Calyxeum!</button>
+									</div>
+								</form>
+
+							</div>
+							
+						</div>
+					</div>
 				</div>
 
 			</section>
@@ -494,7 +521,7 @@
 
 				<div class="container">
 					<div class="contact-maps-row row">
-						<div class="col-md-7 col-md-offset-5">
+						<div class="col-md-8 col-md-offset-2">
 
 							<div class="contact-maps-box" data-animation="fadeIn">
 
