--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -454,7 +454,7 @@
 
 								<h2 class="section-heading">Ready to invest in Calyxeum?</h2>
 
-								<form name="invest-form" action="https://formspree.io/rcolett@calyxeum.com" method="post" class="form form-ajax-submit">
+								<form name="invest-form" action="https://formspree.io/rcolett@calyxeum.com" method="post" class="form">
 									<p><strong>Once you submit this form, a Calyxeum representative will contact you for an initial meeting.</strong></p>
 									<div class="form-validation alert"></div>
 									<div class="form-group">
@@ -535,7 +535,7 @@
 
 								<br />
 
-								<form name="contact" action="https://formspree.io/rcolett@calyxeum.com" method="post" class="form form-ajax-submit">
+								<form name="contact" action="https://formspree.io/rcolett@calyxeum.com" method="post" class="form">
 									<p><strong>Send us a message:</strong></p>
 									<div class="form-validation alert"></div>
 									<div class="form-group">
