--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -124,7 +124,7 @@
 											<div class="hero-heading" data-animation="fadeIn">
 
 												<img src="images/logos/main-logo.png" style="margin-top: -120px; margin-bottom: 30px;" />
-												<p class="hero-tagline">Cannabis growing and processing in Detroit.  Expanding throughout Michigan, adding a female touch to a female plant.</p>
+												<p class="hero-tagline">Calyxeum seeks to redefine the myths of the Cannabis consumer. Changing the perception of Cannabis in the professional world. We represent women, community, diversity, opportunity and empowerment.</p>
 
 											</div>
 
@@ -349,7 +349,7 @@
 							</div>
 								<div class="team-member-text">
 									<h4 class="team-member-name">LaToyia</h4>
-									<div class="team-member-position">Founder</div>
+									<div class="team-member-position">COO</div>
 									<p class="team-member-description">LaToyia R. Rucker is an Experienced Entrepreneur, Educator, Master Gardener and Native Detroiter.  LaToyia has been featured on Detroit’s local WJR, and NPR’s Stateside along with her business partner, sharing industry knowledge and being a female in Cannabis . One of the first females to co-own a Medical Marihuana Licensing Clinic, and featured speaker at Michigan’s First Cannabis Expo. In 2014 she was selected by Goldman Sachs 10,000 Small Business and currently is very active as an alumni. She was also selected by Bloomberg LP 10,000 Small Businesses Coaching Session in 2017. LaToyia is also the founder and owner of Kid Fit Childcare Centers with two metro Detroit Locations.  LaToyia holds a B.S. in Biology from the Tuskegee University, a Master Degree in Education from Wayne State University, and a Master’s Degree in Early Childhood Education from Capella University.</p>
 								</div>
 							</div>
@@ -395,7 +395,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">1</span>
 									<h4 class="hiw-item-title">Fastest Growing Industry</h4>
-									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
+									<p class="hiw-item-description">According to Leafly Editor-in-Chief Bruce Barcott. "Cannabis has essentially doubled its job count between January of 2017 and January of 2020. There is no other industry that comes close." Cannabis is the fastest-growing American industry, surpassing 260,000 jobs.</p>
 								</div>
 							</div>
 						</div>
@@ -407,7 +407,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">2</span>
 									<h4 class="hiw-item-title">High Profit Margins</h4>
-									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
+									<p class="hiw-item-description">According to Business Insider "The US Cannabis industry is worth billions of dollars, and is showing no signs of slowing down. The US industry is worth more than the GDP of 9 US states. Economists estimate the industry's economic impact could reach as high as $77 billion by 2022.</p>
 								</div>
 							</div>
 						</div>
@@ -421,7 +421,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">3</span>
 									<h4 class="hiw-item-title">Experienced Team</h4>
-									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
+									<p class="hiw-item-description">10 years of experience in the legal Cannabis Industry and advanced Horticulture techniques. Overwhelming support from the local Detroit community including elected officials, community groups and professional organizations. Recognized for stellar involvement lobbying for Cannabis Social Equity and over 90% Patient satisfaction.</p>
 								</div>
 							</div>
 						</div>
@@ -433,7 +433,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">4</span>
 									<h4 class="hiw-item-title">Ground Floor Opportunity</h4>
-									<!-- <p class="hiw-item-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Vivamus eu sollicitudin lacus, nec ultricies lorem.</p> -->
+									<p class="hiw-item-description">Michigan's Medical Cannabis Market is the second largest in the U.S. with over 300,000 registered patients. All around the country there is a Cannabis supply shortage because of the increase in demand and Cannabis being deemed as essential during a global pandemic. As a wholesale supplier Calyxeum will fill in this supply chain gap. Our founders have already established relationships, purchasing orders and partnership opportunities because of their seniority and rapport in the industry.</p>
 								</div>
 							</div>
 						</div>
