--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -85,6 +85,7 @@
 							<li><a href="#products">Products</a></li>
 							<li><a href="#team">The Team</a></li>
 							<li><a href="#investing">Investing</a></li>
+							<li><a href="#community">Community</a></li>
 							<li><a href="#contact-maps">Contact</a></li>
 
 						</ul>
@@ -491,6 +492,65 @@
 				</div>
 
 			</section>
+
+			<section id="community" class="community-section section">
+
+				<div class="container">
+
+					<h2 class="section-heading text-center">Calyxeum in the Community</h2>
+
+					<div class="text-center">
+						<p>Calyxeum is 100% committed to making the surrounding community a better place for the citizens of Detroit. We are located in District 7, which is home to beautiful parks such as the impressive and immense Rouge Park. We are partnering with well known active and accomplished community organizations to create programs and employment opportunities making District 7 a better place to live.</p>
+						<p>It is very important to us that we beautify and positively impact the surrounding area by sponsoring nearby playgrounds, providing mentors for an afterschool program, and volunteering our time to educate groups such as the elderly and veterans. We also have plans to create tutoring programs at nearby schools and rehab vacant homes that surround our facility. </p>
+						<p>Calyxeum wants to have a lasting impact on our community. Our goal is to establish a non-profit arm that will provide training and education for Detroiters that are interested in the Cannabis industry. Our non profit's mission will also educate the community on the medicinal benefits of the Cannabis plant, the Endocannabinoid System and provide best practices and tips for healthy consumption. </p>
+					</div>
+
+					<br />
+					<br />
+
+					<div class="benefits-row row">
+
+						<!-- BENEFIT 1 -->
+						<div class="col-sm-6 col-md-6">
+							<div class="benefit" style="height: 340px;">
+								<span class="benefit-icon fa fa-home" data-animation="bounceIn"></span>
+								<h4 class="benefit-title">Rehabilitating Dilapidated Homes</h4>
+								<p class="benefit-description">Purchasing residential homes in the same community as our Cultivation facility.  We desire to rebuild these blight infested homes and replace them with shipping containers to house our after school program and classes. We have developed a tiny house community design that includes community space and improved residential homes.</p>
+							</div>
+						</div>
+
+						<!-- BENEFIT 2 -->
+						<div class="col-sm-6 col-md-6">
+							<div class="benefit" style="height: 340px;">
+								<span class="benefit-icon fa fa-calculator" data-animation="bounceIn"></span>
+								<h4 class="benefit-title">After School STEM Program</h4>
+								<p class="benefit-description">We will work with ages 10-17 tutoring in small groups on STEM subjects. We will also sponsor educational workshops and outings to expose the youth in the neighborhood to new opportunities and career paths in Science, Technology, Engineering and Math.</p>
+							</div>
+						</div>
+
+						<div class="hidden-md hidden-lg clear"></div>
+
+						<!-- BENEFIT 3 -->
+						<div class="col-sm-6 col-md-6">
+							<div class="benefit" style="height: 340px;">
+								<span class="benefit-icon fa fa-users" data-animation="bounceIn"></span>
+								<h4 class="benefit-title">Workforce Development Program</h4>
+								<p class="benefit-description">We are developing and establishing curriculums to teach people of color and Social Equity applicants how to grow, process, operate a cannabis business, complete the licensing processing, accounting, marketing etc. We will provide end to end training on skills needed in the Cannabis industry supply chain.</p>
+							</div>
+						</div>
+
+						<!-- BENEFIT 4 -->
+						<div class="col-sm-6 col-md-6">
+							<div class="benefit" style="height: 340px;">
+								<span class="benefit-icon fa fa-leaf" data-animation="bounceIn"></span>
+								<h4 class="benefit-title">Build Community Gardens</h4>
+								<p class="benefit-description">District 7 is filled with vacant lots of green land, we want to replace this abandoned land with produce filled gardens. The surrounding community will be trained to operate the gardens and have the ability to consume the produce harvested.</p>
+							</div>
+						</div>
+
+					</div>
+				</div>
+				</section>
 
 			<!-- VIDEO SECTION
 			================================= -->
