--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -47,7 +47,7 @@
 		
 	</head>
 
-	<body class="enable-animations enable-preloader">
+	<body class="enable-animations enable-preloader preloader-dark">
 
 		<div id="document" class="document">
 
