--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -143,6 +143,45 @@
 
 					</li>
 
+					<!-- SECTION SLIDE 2 -->
+					<li class="section-slide">
+
+						<div class="section-background">
+
+							<!-- IMAGE BACKGROUND -->
+							<div class="section-background-image parallax" data-stellar-ratio="0.4">
+								<img src="images/backgrounds/hero-bg-slider-2.jpg" alt="" style="opacity: 0.6;">
+							</div>
+
+						</div>
+
+						<div class="container">
+
+							<div class="hero-content parallax">
+								<div class="hero-content-inner">
+
+									<div class="row">
+										<div class="col-md-6">
+
+											<div class="hero-heading" data-animation="fadeIn">
+												<p class="hero-tagline">Calyxeum Consulting is a full-service Cannabis consultancy, providing industry leading expertise to individuals and groups seeking to enter the medical and recreational Cannabis marketplaces.</p>
+
+											</div>
+
+											<p class="hero-buttons" style="margin-top: 20px;">
+												<a href="https://calyxeumconsulting.com" target="_blank" class="btn btn-lg btn-primary">Check Us Out!</a>
+											</p>
+
+										</div>
+									</div>
+									
+								</div>
+							</div>
+
+						</div>
+
+					</li>
+
 			</section>
 
 			<!-- HEADLINE
