consulting slide header text

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -164,6 +164,8 @@
 										<div class="col-md-6">
 
 											<div class="hero-heading" data-animation="fadeIn">
+												<h2>Calyxeum Consulting</h2>
+												<br />
 												<p class="hero-tagline">Calyxeum Consulting is a full-service Cannabis consultancy, providing industry leading expertise to individuals and groups seeking to enter the medical and recreational Cannabis marketplaces.</p>
 
 											</div>
