--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -225,18 +225,18 @@
 
 						<!-- DESCRIPTION TEXT -->
 						<div class="about-text col-md-6">
-							<p class="lead">Our intention is to expand our growing and processing operations throughout Michigan, adding a female touch to a female plant.</p>
+							<p class="lead">Our intention is to expand our growing and processing brand throughout Michigan, adding a female touch to a female plant.</p>
 							<p>We intend to maintain a competitive advantage in this quickly expanding market by embracing and expanding the relationships that we have built and cultivated, much like our strains, since 2009.</p>
 							<ul class="icon-list">
 								<li>
 									<span class="icon-list-icon fa fa-heart-o" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">Care &amp; Quality</h4>
-									<p>Wholesale supplier of organic, and responsibly cultivated superior-quality medical-grade Cannabis and edible products to dispensaries and providers in the state of Michigan.</p>
+									<p>Wholesale brand of organic, and responsibly cultivated superior-quality medical-grade Cannabis and edible products to dispensaries and providers in the state of Michigan.</p>
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-lightbulb-o" data-animation="bounceIn"></span>
 									<h4 class="icon-list-title">Branding</h4>
-									<p>Build a successful commercial cultivation & processing facility and build a recognizable brand in a rapidly growing industry.</p>
+									<p>Build a successful and recognizable minority inclusive commercial cultivation & processing brand in a rapidly growing industry.</p>
 								</li>
 								<li>
 									<span class="icon-list-icon fa fa-exclamation" data-animation="bounceIn"></span>
@@ -475,7 +475,7 @@
 								<div class="hiw-item-text">
 									<span class="hiw-item-icon">4</span>
 									<h4 class="hiw-item-title">Ground Floor Opportunity</h4>
-									<p class="hiw-item-description">Michigan's Medical Cannabis Market is the second largest in the U.S. with over 300,000 registered patients. All around the country there is a Cannabis supply shortage because of the increase in demand and Cannabis being deemed as essential during a global pandemic. As a wholesale supplier Calyxeum will fill in this supply chain gap. Our founders have already established relationships, purchasing orders and partnership opportunities because of their seniority and rapport in the industry.</p>
+									<p class="hiw-item-description">Michigan's Medical Cannabis Market is the second largest in the U.S. with over 300,000 registered patients. All around the country there is a Cannabis supply shortage because of the increase in demand and Cannabis being deemed as essential during a global pandemic. As a wholesale brand Calyxeum will fill in this supply chain gap.  Our founders have already established relationships, purchasing orders and partnership opportunities because of their seniority and rapport in the industry.</p>
 								</div>
 							</div>
 						</div>
