--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
                 <img src="images/logos/header-logo.png" alt="CALYXEUM" />
               </a>
             {% else %}
-              <a class="navbar-logo navbar-brand anchor-link" href="/">
+              <a class="navbar-logo navbar-brand" href="/">
                 <img src="images/logos/header-logo.png" alt="CALYXEUM" />
               </a>
             {% endif %}
@@ -105,7 +105,13 @@
                 <li><a href="#contact-maps">Contact</a></li>
                 <li><a href="/merch">Merchandise</a></li>
               {% else %}
-                <li><a href="/">Home</a></li>
+                <li><a href="https://www.instagram.com/calyxeum_detroit" target="_blank"
+                  ><span class="fa fa-instagram fa-2x"></span
+                ></a>
+                </li>
+                <li><a href="https://www.youtube.com/channel/UClRqve6gDTG9y2T8Z2G1qdQ" target="_blank"
+                  ><span class="fa fa-youtube fa-2x"></span
+                ></a></li>
               {% endif %}
             </ul>
           </nav>
@@ -122,9 +128,14 @@
 
           <div class="footer-socmed">
             <a href="https://www.instagram.com/calyxeum_detroit" target="_blank"
-              ><span class="fa fa-instagram"></span
+              ><span class="fa fa-instagram fa-2x"></span
+            ></a>
+            <a href="https://www.youtube.com/channel/UClRqve6gDTG9y2T8Z2G1qdQ" target="_blank"
+              ><span class="fa fa-youtube fa-2x"></span
             ></a>
           </div>
+          <br />
+          <br />
           <div class="footer-copyright">&copy; 2020 Calyxeum</div>
         </div>
       </section>
