--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,14 +44,16 @@
 
     <!-- LIBRARIES CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
 
     <!-- SPECIFIC CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/custom.css" />
 
     <!-- COLORS -->
     <link id="color-css" rel="stylesheet" href="css/colors/orange.css" />
+
+    <script src="https://kit.fontawesome.com/2e0620ed8b.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="enable-animations enable-preloader preloader-dark">
@@ -133,10 +135,16 @@
             <a href="https://www.youtube.com/channel/UClRqve6gDTG9y2T8Z2G1qdQ" target="_blank"
               ><span class="fa fa-youtube fa-2x"></span
             ></a>
+            <a href="https://www.facebook.com/calyxeum" target="_blank"
+              ><span class="fa fa-facebook fa-2x"></span
+            ></a>
+            <a href="https://www.linkedin.com/company/calyxeum" target="_blank"
+              ><span class="fa fa-linkedin fa-2x"></span
+            ></a>
           </div>
           <br />
           <br />
-          <div class="footer-copyright">&copy; 2020 Calyxeum</div>
+          <div class="footer-copyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Calyxeum - All Rights Reserved</div>
         </div>
       </section>
     </div>
@@ -174,7 +182,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/respimage.min.js"></script>
     <script src="js/jpreloader.min.js"></script>
-    <script src="js/smoothscroll.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
     <script src="js/jquery.nav.min.js"></script>
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
