--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
                 <li><a href="#investing">Investing</a></li>
                 <li><a href="#community">Community</a></li>
                 <li><a href="#contact-maps">Contact</a></li>
-                <li><a href="/merch">Merchandise</a></li>
+                <li><a href="https://calyxeumshop.com" target="_blank">Merchandise</a></li>
               {% else %}
                 <li><a href="https://www.instagram.com/calyxeum_detroit" target="_blank"
                   ><span class="fa fa-instagram fa-2x"></span
