--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if lt IE 7]>
+<html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7]>
+<html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8]>
+<html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
 <html lang="en">
-  <!--<![endif]-->
+<!--<![endif]-->
 
-  <head>
-    <meta charset="utf-8" />
+<head>
+    <meta charset="utf-8"/>
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1"
     />
 
     <!-- BASIC INFO -->
     <title>CALYXEUM - Made In Detroit!</title>
-    <meta name="author" content="Rebecca Colett" />
+    <meta name="author" content="Rebecca Colett"/>
     <meta
-      name="keywords"
-      content="responsive, parallax, bootstrap, html5 template, one page, landing page"
+            name="keywords"
+            content="responsive, parallax, bootstrap, html5 template, one page, landing page"
     />
     <meta
-      name="description"
-      content="Calyxeum - Cannabis growing and processing in Detroit.  Expanding throughout Michigan, adding a female touch to a female plant."
+            name="description"
+            content="Calyxeum - Cannabis growing and processing in Detroit.  Expanding throughout Michigan, adding a female touch to a female plant."
     />
 
     <!-- FAVICONS -->
-    <link rel="icon" href="images/logos/header-logo.png" />
+    <link rel="icon" href="images/logos/header-logo.png"/>
     <!-- <link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.png"> -->
 
     <!-- CSS
@@ -34,176 +37,174 @@
 
     <!-- GOOGLE FONTS -->
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
     />
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
     />
 
     <!-- LIBRARIES CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/animate.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/animate.min.css"/>
 
     <!-- SPECIFIC CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/custom.css"/>
 
     <!-- COLORS -->
-    <link id="color-css" rel="stylesheet" href="css/colors/orange.css" />
+    <link id="color-css" rel="stylesheet" href="css/colors/orange.css"/>
 
     <script src="https://kit.fontawesome.com/2e0620ed8b.js" crossorigin="anonymous"></script>
-  </head>
+</head>
 
-  <body class="enable-animations enable-preloader preloader-dark">
-    <div id="document" class="document">
-      <!-- HEADER
-			================================= -->
-      <header
-        id="header"
-        class="header-section section section-dark navbar navbar-fixed-top"
-      >
+<body class="enable-animations enable-preloader preloader-dark">
+<div id="document" class="document">
+    <!-- HEADER
+          ================================= -->
+    <header
+            id="header"
+            class="header-section section section-dark navbar navbar-fixed-top"
+    >
         <div class="container-fluid">
-          <div class="navbar-header navbar-left">
-            <!-- RESPONSIVE MENU BUTTON -->
-            <button
-              type="button"
-              class="navbar-toggle"
-              data-toggle="collapse"
-              data-target="#navigation"
-            >
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+            <div class="navbar-header navbar-left">
+                <!-- RESPONSIVE MENU BUTTON -->
+                <button
+                        type="button"
+                        class="navbar-toggle"
+                        data-toggle="collapse"
+                        data-target="#navigation"
+                >
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-            <!-- HEADER LOGO -->
-            {% if page.menu %}
-              <a class="navbar-logo navbar-brand anchor-link" href="#hero">
-                <img src="images/logos/header-logo.png" alt="CALYXEUM" />
-              </a>
-            {% else %}
-              <a class="navbar-logo navbar-brand" href="/">
-                <img src="images/logos/header-logo.png" alt="CALYXEUM" />
-              </a>
-            {% endif %}
-          </div>
-
-          <nav
-            id="navigation"
-            class="navigation navbar-collapse collapse navbar-right"
-          >
-            <!-- NAVIGATION LINKS -->
-            <ul id="header-nav" class="nav navbar-nav">
-              <li><a href="#hero" class="hidden">Top</a></li>
-              {% if page.menu %}
-                <li><a href="#about">About</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#investing">Investing</a></li>
-                <li><a href="#community">Community</a></li>
-                <li><a href="#contact-maps">Contact</a></li>
-                <li><a href="https://calyxeumshop.com" target="_blank">Merchandise</a></li>
-              {% else %}
-                <li><a href="https://www.instagram.com/calyxeum_detroit" target="_blank"
-                  ><span class="fa fa-instagram fa-2x"></span
-                ></a>
-                </li>
-                <li><a href="https://www.youtube.com/channel/UClRqve6gDTG9y2T8Z2G1qdQ" target="_blank"
-                  ><span class="fa fa-youtube fa-2x"></span
-                ></a></li>
-              {% endif %}
-            </ul>
-          </nav>
-        </div>
-      </header>
-      {{content}}
-      <!-- FOOTER
-			================================= -->
-      <section id="footer" class="footer-section section">
-        <div class="container">
-          <h3 class="footer-logo">
-            <img src="images/logos/main-logo.png" style="width: 50%; height: auto;" />
-          </h3>
-
-          <div class="footer-socmed">
-            <a href="https://www.instagram.com/calyxeum_detroit" target="_blank"
-              ><span class="fa fa-instagram fa-2x"></span
-            ></a>
-            <a href="https://www.youtube.com/channel/UClRqve6gDTG9y2T8Z2G1qdQ" target="_blank"
-              ><span class="fa fa-youtube fa-2x"></span
-            ></a>
-            <a href="https://www.facebook.com/calyxeum" target="_blank"
-              ><span class="fa fa-facebook fa-2x"></span
-            ></a>
-            <a href="https://www.linkedin.com/company/calyxeum" target="_blank"
-              ><span class="fa fa-linkedin fa-2x"></span
-            ></a>
-          </div>
-          <br />
-          <br />
-          <div class="footer-copyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Calyxeum - All Rights Reserved</div>
-        </div>
-      </section>
-    </div>
-    <div id="age-modal" class="modal fade" tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title">Welcome to Calyxeum!</h4>
-          </div>
-          <div class="modal-body">
-            <p>Are you at least 21?</p>
-          </div>
-          <div class="modal-footer">
-            <button id="age-yes-button" type="button" class="btn btn-primary">
-              YES
-            </button>
-            <button id="age-no-button" type="button" class="btn btn-default">
-              NO
-            </button>
-            <div id="under-21" style="display: none">
-              <hr />
-              <h4 class="text-danger">Sorry, you must be 21 to continue.</h4>
+                <!-- HEADER LOGO -->
+                <a class="navbar-logo navbar-brand" href="/">
+                    <img src="images/logos/header-logo.png" alt="CALYXEUM"/>
+                </a>
             </div>
-          </div>
+
+            <nav
+                    id="navigation"
+                    class="navigation navbar-collapse collapse navbar-right"
+            >
+                <!-- NAVIGATION LINKS -->
+                <ul id="header-nav" class="nav navbar-nav">
+                    <li><a href="#hero" class="hidden">Top</a></li>
+                    {% if page.menu %}
+                    <li><a href="#about">About</a></li>
+                    <li><a href="/store.html">Store</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#investing">Investing</a></li>
+                    <li><a href="#community">Community</a></li>
+                    <li><a href="#contact-maps">Contact</a></li>
+                    <li><a href="https://calyxeumshop.com" target="_blank">Merchandise</a></li>
+                    {% else %}
+                    <li><a href="https://www.instagram.com/calyxeum_detroit" target="_blank"
+                    ><span class="fa fa-instagram fa-2x"></span
+                    ></a>
+                    </li>
+                    <li><a href="https://www.youtube.com/channel/UClRqve6gDTG9y2T8Z2G1qdQ" target="_blank"
+                    ><span class="fa fa-youtube fa-2x"></span
+                    ></a></li>
+                    {% endif %}
+                </ul>
+            </nav>
+        </div>
+    </header>
+    {{content}}
+    <!-- FOOTER
+          ================================= -->
+    <section id="footer" class="footer-section section">
+        <div class="container">
+            <h3 class="footer-logo">
+                <img src="images/logos/main-logo.png" style="width: 50%; height: auto;"/>
+            </h3>
+
+            <div class="footer-socmed">
+                <a href="https://www.instagram.com/calyxeum_detroit" target="_blank"
+                ><span class="fa fa-instagram fa-2x"></span
+                ></a>
+                <a href="https://www.youtube.com/channel/UClRqve6gDTG9y2T8Z2G1qdQ" target="_blank"
+                ><span class="fa fa-youtube fa-2x"></span
+                ></a>
+                <a href="https://www.facebook.com/calyxeum" target="_blank"
+                ><span class="fa fa-facebook fa-2x"></span
+                ></a>
+                <a href="https://www.linkedin.com/company/calyxeum" target="_blank"
+                ><span class="fa fa-linkedin fa-2x"></span
+                ></a>
+            </div>
+            <br/>
+            <br/>
+            <div class="footer-copyright">Copyright &copy;
+                <script>document.write(new Date().getFullYear())</script>
+                Calyxeum - All Rights Reserved
+            </div>
+        </div>
+    </section>
+</div>
+<div id="age-modal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Welcome to Calyxeum!</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you at least 21?</p>
+            </div>
+            <div class="modal-footer">
+                <button id="age-yes-button" type="button" class="btn btn-primary">
+                    YES
+                </button>
+                <button id="age-no-button" type="button" class="btn btn-default">
+                    NO
+                </button>
+                <div id="under-21" style="display: none">
+                    <hr/>
+                    <h4 class="text-danger">Sorry, you must be 21 to continue.</h4>
+                </div>
+            </div>
         </div>
         <!-- /.modal-content -->
-      </div>
-      <!-- /.modal-dialog -->
     </div>
-    <!-- /.modal -->
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 
-    <!-- LIBRARIES JS
-		================================= -->
-    <script src="js/jquery-1.11.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/respimage.min.js"></script>
-    <script src="js/jpreloader.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script src="js/jquery.nav.min.js"></script>
-    <script src="js/jquery.inview.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/responsiveslides.min.js"></script>
-
-    <!-- MAIN SCRIPT
-		================================= -->
-    <script src="js/script.js"></script>
-
-    <!-- GOOGLE ANALYTICS
+<!-- LIBRARIES JS
     ================================= -->
-    <!-- <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<script src="js/jquery-1.11.2.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/respimage.min.js"></script>
+<script src="js/jpreloader.min.js"></script>
+<script src="js/smoothscroll.js"></script>
+<script src="js/jquery.nav.min.js"></script>
+<script src="js/jquery.inview.min.js"></script>
+<script src="js/jquery.counterup.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/responsiveslides.min.js"></script>
 
-      ga('create', 'UA-30698565-8', 'auto');
-      ga('send', 'pageview');
+<!-- MAIN SCRIPT
+    ================================= -->
+<script src="js/script.js"></script>
 
-    </script> -->
-  </body>
+<!-- GOOGLE ANALYTICS
+================================= -->
+<!-- <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-30698565-8', 'auto');
+  ga('send', 'pageview');
+
+</script> -->
+</body>
 </html>
